# NewtonLogitRegression

./: CMakeLists.txt  functions_init.c  functions_init.h  gauss.c  gauss.h  main.c  marcros.h  vector_utils.c  vector_utils.h
